public class Score {
    
}